<resources>
    <string name="app_name">unifind</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Pelacakan</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_person">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Penemuan post form-->
    <string name="form_title">Buat Postingan Penemuan</string>
    <string name="label_nama">Nama <font color='#FF0000'>*</font></string>
    <string name="label_nim">NIM <font color='#FF0000'>*</font></string>
    <string name="label_nama_barang">Nama Barang <font color='#FF0000'>*</font></string>
    <string name="label_kategori">Kategori <font color='#FF0000'>*</font></string>
    <string name="label_deskripsi">Deskripsi Barang <font color='#FF0000'>*</font></string>
    <string name="label_tanggal">Tanggal Penemuan <font color='#FF0000'>*</font></string>
    <string name="label_waktu">Waktu Penemuan <font color='#FF0000'>*</font></string>
    <string name="label_lokasi">Lokasi Penemuan <font color='#FF0000'>*</font></string>
    <string name="label_foto">Foto Barang <font color='#FF0000'>*</font></string>

    <!--Form Pencarian-->
    <string name="title_form_kehilangan">Lapor Kehilangan Barang</string>
    <string name="label_tanggal_hilang">Tanggal Hilang <font color='#FF0000'>*</font></string>
    <string name="label_waktu_hilang">Waktu Hilang <font color='#FF0000'>*</font></string>
    <string name="label_lokasi_hilang">Lokasi Terakhir Dilihat <font color='#FF0000'>*</font></string>
    <string name="button_laporkan_kehilangan">Laporkan Kehilangan</string>

    <!--Form Klaim Barang-->
    <string-array name="kategori_barang_array">
        <item>Pilih Kategori</item>
        <item>Laptop</item>
        <item>Handphone</item>
        <item>Charger</item>
        <item>Earphone</item>
        <item>Jam Tangan</item>
        <item>Alat Tulis</item>
        <item>Jaket/Hoodie</item>
        <item>Helm</item>
        <item>Kartu Identitas</item>
        <item>Kacamata</item>
        <item>Lainnya</item>
    </string-array>
</resources>