<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.androidprojek.unifind.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_pelacakan_to_addTrackingFragment"
            app:destination="@id/add_tracking_fragment"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.androidprojek.unifind.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.androidprojek.unifind.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Fragment untuk form tambah pelacakan -->
    <fragment
        android:id="@+id/add_tracking_fragment"
        android:name="com.androidprojek.unifind.ui.dashboard.AddTrackingFragment"
        android:label="Tambah Pelacakan" />

    <!--Penemuan form -->
    <fragment
        android:id="@+id/penemuan_post_form"
        android:name="com.androidprojek.unifind.ui.home.penemuan_post_form"
        android:label="Lapor Barang Ditemukan"
        tools:layout="@layout/penemuan_post_form" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.androidprojek.unifind.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <!-- PINDAHKAN ACTION KE SINI -->
        <action
            android:id="@+id/action_penemuan_to_penemuanPostForm"
            app:destination="@id/penemuan_post_form" />

    </fragment>

    <!-- Penemuan Fragment tidak perlu punya action lagi -->
    <fragment
        android:id="@+id/navigation_penemuan"
        android:name="com.androidprojek.unifind.ui.home.PenemuanFragment"
        android:label="Penemuan"
        tools:layout="@layout/fragment_penemuan" />
</navigation>