<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white"
    tools:context=".ui.FormBarangActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon"
                android:contentDescription="Tombol Kembali" />

            <TextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_form_kehilangan" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/labelNama"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nama" />
            <RelativeLayout
                android:id="@+id/fieldNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelNama"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle"
                android:padding="6dp">
                <EditText
                    android:id="@+id/etNama"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="6dp"
                    android:hint="Masukkan nama lengkap Anda"
                    android:inputType="textPersonName" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelNim"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldNama"
                android:layout_marginTop="16dp"
                android:text="@string/label_nim" />
            <RelativeLayout
                android:id="@+id/fieldNim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelNim"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle"
                android:padding="6dp">
                <EditText
                    android:id="@+id/etNim"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="6dp"
                    android:hint="Masukkan NIM Anda"
                    android:inputType="number" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelNamaBarang"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldNim"
                android:layout_marginTop="16dp"
                android:text="@string/label_nama_barang" />
            <RelativeLayout
                android:id="@+id/fieldNamaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelNamaBarang"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle"
                android:padding="6dp">
                <EditText
                    android:id="@+id/etNamaBarang"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="6dp"
                    android:hint="Contoh: Tumbler Corkcicle"
                    android:inputType="text" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelKategori"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldNamaBarang"
                android:layout_marginTop="16dp"
                android:text="@string/label_kategori" />
            <RelativeLayout
                android:id="@+id/fieldKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelKategori"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle">
                <Spinner
                    android:id="@+id/spinnerKategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingVertical="4dp"
                    android:contentDescription="Pilih kategori barang" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelDeskripsi"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldKategori"
                android:layout_marginTop="16dp"
                android:text="@string/label_deskripsi" />
            <RelativeLayout
                android:id="@+id/fieldDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelDeskripsi"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle_description"
                android:padding="6dp">
                <EditText
                    android:id="@+id/etDeskripsi"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="6dp"
                    android:gravity="top"
                    android:hint="Jelaskan ciri-ciri barang..."
                    android:inputType="textMultiLine"
                    android:minLines="4" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelTanggal"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldDeskripsi"
                android:layout_marginTop="16dp"
                android:text="@string/label_tanggal_hilang" />
            <RelativeLayout
                android:id="@+id/fieldTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelTanggal"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle"
                android:clickable="true"
                android:focusable="true">
                <TextView
                    android:id="@+id/tvTanggal"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:hint="Pilih tanggal" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelWaktu"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldTanggal"
                android:layout_marginTop="16dp"
                android:text="@string/label_waktu_hilang" />
            <RelativeLayout
                android:id="@+id/fieldWaktu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelWaktu"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle"
                android:clickable="true"
                android:focusable="true">
                <TextView
                    android:id="@+id/tvWaktu"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:hint="Pilih waktu" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelLokasi"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldWaktu"
                android:layout_marginTop="16dp"
                android:text="@string/label_lokasi_hilang" />
            <RelativeLayout
                android:id="@+id/fieldLokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelLokasi"
                android:layout_marginTop="4dp"
                android:background="@drawable/input_rectangle"
                android:padding="6dp">
                <EditText
                    android:id="@+id/etLokasi"
                    style="@style/InputTeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="6dp"
                    android:hint="Contoh: Gedung A, Lantai 3"
                    android:inputType="text" />
            </RelativeLayout>

            <TextView
                android:id="@+id/labelFoto"
                style="@style/SubHeaderTextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldLokasi"
                android:layout_marginTop="16dp"
                android:text="@string/label_foto" />
            <LinearLayout
                android:id="@+id/fieldFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelFoto"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUploadGambar"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pilih Gambar"
                    app:cornerRadius="8dp"
                    android:textAllCaps="false"/>
                <TextView
                    android:id="@+id/tvImageCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    tools:text="3 gambar dipilih" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fieldFoto"
                android:layout_marginTop="24dp"
                android:paddingVertical="12dp"
                android:background="@drawable/lacak_button"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="Simpan"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible"/>

    </RelativeLayout>
</ScrollView>